src/test/ui/pattern/usefulness/match-privately-empty.stderr
error[E0004]: non-exhaustive patterns: `Some(Private { misc: true, .. })` not covered
  --> $DIR/match-privately-empty.rs:13:11
   |
LL |     match private::DATA {
   |           ^^^^^^^^^^^^^ pattern `Some(Private { misc: true, .. })` not covered
   | 
  ::: $SRC_DIR/core/src/option.rs:LL:COL
   |
LL |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
   |     ---- not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `std::option::Option<private::Private>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
